<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="loading_dialog_text">Please wait for operation to complete</string>
    <string name="success">Success</string>
    <string name="menu_actions">Transactions</string>
    <string name="menu_draft">Draft</string>
    <string name="menu_dictionaries">Dictionaries</string>
    <string name="menu_import_export">Import/Export</string>
    <string name="menu_import_database">Import database</string>
    <string name="menu_export_database">Export database</string>
    <string name="menu_export_excel">Export excel</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_statistics_monthly">Statistics monthly</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_dictionary_currencies">Currencies</string>
    <string name="menu_dictionary_categories">Categories</string>
    <string name="menu_dictionary_accounts">Accounts</string>
    <string name="menu_dictionary_account_groups">Groups of accounts</string>
    <string name="cause">Cause:</string>
    <string name="exception">Error:</string>
    <string name="error">Error</string>
    <string name="account_group">group of accounts</string>
    <string name="currencies">Currencies</string>
    <string name="accounts">Accounts</string>
    <string name="categories">Categories</string>
    <string name="categories_month">From the beginning of the month</string>
    <string name="account_groups">Groups of accounts</string>
    <string name="dictionaries">Dictionaries</string>
    <string name="show_hidden_items">show hidden</string>
    <string name="hidden">hidden</string>
    <string name="add_dictionary_button_label">Add</string>
    <string name="account_action">Account actions</string>
    <string name="account_action_expense">Expense</string>
    <string name="account_action_income">Income</string>
    <string name="account_action_transfer_from">Transfer from</string>
    <string name="account_action_transfer_to">Transfer to</string>
    <string name="transfer_from">From </string>
    <string name="transfer_to">To </string>
    <string name="draft">Draft</string>
    <string name="toggle_all_button_label">Select &#10;all</string>
    <string name="toggle_none_button_label">Clear</string>
    <string name="commit_button_label">Save</string>
    <string name="delete_button_label">Delete</string>
    <string name="dialog_commit_title">Saving</string>
    <string name="dialog_delete_title">Deleting</string>
    <string name="dialog_commit_message">Save %d item(-s)?</string>
    <string name="dialog_delete_message">Delete %d item(-s)?</string>
    <string name="product_hint">Description of product</string>
    <string name="sum_hint">Sum</string>
    <string name="add_title">Add</string>
    <string name="edit_title">Edit</string>
    <string name="add_button_label">Add</string>
    <string name="edit_button_label">Edit</string>
    <string name="cancel_button_label">Cancel</string>
    <string name="account_from">account from</string>
    <string name="account_to">account to</string>
    <string name="sum_from_hint">Sum out</string>
    <string name="sum_to_hint">Sum in</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_ok">OK</string>
    <string name="action_expense">Expense</string>
    <string name="action_income">Income</string>
    <string name="action_transfer">Transfer</string>
    <string name="error_sum_parse">Invalid format of sum</string>
    <string name="error_sum_negative">Negative sum is not valid</string>
    <string name="actions">Transactions</string>
    <string name="date">Date</string>
    <string name="currency_edit">Currency - Edit</string>
    <string name="currency_add">Currency - Add</string>
    <string name="account_edit">Account - Edit</string>
    <string name="account_add">Account - Add</string>
    <string name="category_edit">Category - Edit</string>
    <string name="category_add">Category - Add</string>
    <string name="account_group_edit">Group of accounts - Edit</string>
    <string name="account_group_add">Group of accounts - Add</string>
    <string name="error_currency_delete">Deletion prohibited. You need to delete linked accounts.</string>
    <string name="error_account_delete">Deletion prohibited. You need to delete linked transactions and unlink linked account groups.</string>
    <string name="error_category_delete">Deletion prohibited. You need to delete linked transactions and child categories.</string>
    <string name="error_account_group_delete">Deletion prohibited. You need to unlink linked accounts.</string>
    <string name="name">Name</string>
    <string name="symbol">Alias</string>
    <string name="is_not_visible">hidden</string>
    <string name="comment">Comment</string>
    <string name="currency">Currency</string>
    <string name="account">Account</string>
    <string name="category">Category</string>
    <string name="sum_account">Initial sum</string>
    <string name="parent">Parent</string>
    <string name="null_parent">root element in hierarchy</string>
    <string name="error_hierarchy_loop">Loops are not allowed in the hierarchy</string>
    <string name="statistics">Statistics</string>
    <string name="statistics_monthly">Statistics monthly</string>
    <string name="daily">Daily</string>
    <string name="no_data">No data</string>
    <string name="month_average">Average for month</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="night_mode">Night mode</string>
    <string name="format_date_time_number">Display format</string>
    <string name="format_number_decimal">Decimal divider</string>
    <string name="format_number_thousand">Thousand divider</string>
    <string name="format_date">Date format</string>
    <string name="format_time">Time format</string>
    <string name="before">Before</string>
    <string name="next">Next</string>
    <string name="add_into_draft_success_message">Added to draft</string>
    <string name="add_success_message">Added successfully</string>
    <string name="account_not_selected_message">Account not selected</string>
    <string name="error_database_version_mismatch">Database is not supported by the application. Update the app</string>
    <string name="error_database_invalid">Database data invalid</string>
    <string name="error_database_open">Unable open database</string>
    <string name="error_open_file">Unable open file</string>
    <string name="error_write_file">Unable write file</string>
    <string name="error_file_not_found">File not found</string>
    <string name="success_import">Import successful</string>
    <string name="success_export">Export successful</string>
    <string name="restart">Application will be restarted</string>
    <string name="import_export">Import/Export</string>
    <string name="excel_actions">Transactions</string>
    <string name="excel_actions_type">Type</string>
    <string name="excel_actions_account">Account</string>
    <string name="excel_actions_sum10000">Sum</string>
    <string name="excel_actions_currency">Currency</string>
    <string name="excel_actions_category">Category</string>
    <string name="excel_actions_product">Product</string>
    <string name="excel_actions_created_at">Date Time</string>
    <string name="excel_actions_type_initial">Initial</string>
    <string name="excel_actions_type_transaction">Transaction</string>
    <string name="excel_actions_type_transfer">Transfer</string>
    <string name="excel_categories">Categories</string>
    <string name="excel_categories_name">Name</string>
    <string name="excel_categories_parent">Parent</string>
    <string name="excel_categories_full">Full name</string>
    <string name="draft_total_selected_label">Selected total:</string>
    <string name="no_product">No product description</string>
    <string name="use_draft_title">Use draft</string>
    <string name="use_draft_summary_on">New transactions enrolls into draft first</string>
    <string name="use_draft_summary_off">New transactions commits immediately, past draft</string>
    <string-array name="languages">
        <item>System</item>
        <item>English</item>
        <item>Russian (Русский)</item>
        <item>Ukrainian (Українська)</item>
    </string-array>
    <string-array name="night_modes">
        <item>System</item>
        <item>On</item>
        <item>Off</item>
    </string-array>
</resources>